<resources>
    <string name="app_name">Channelize Live</string>
    <string name="reaction_count">\# of Reactions: \</string>
    <string name="view_count">\# of Views: \</string>
    <string name="comment_count">\# of Comments: \</string>
    <string name="live_event_string">Available</string>
    <string name="start_event_date_string">Start: </string>
    <string name="end_event_date_string">End: </string>
    <string name="public_key_validation_check">Public Key is not valid</string>
    <string name="store_url_key_validation_string">Store URL is not valid</string>
    <string name="email_validation_string">Email is not valid</string>
    <string name="password_validation_string">Password is not valid</string>
    <string name="camera_enabled_string">Camera Enabled</string>
    <string name="microphone_enable_string">Microphone Enabled</string>
    <string name="excellent_connection_string">Excellent</string>
    <string name="very_good_connection_string">Very Good</string>
    <string name="good_connection_string">Good</string>
    <string name="poor_connection_string">Poor Connection</string>
    <string name="are_you_sure_you_want_to_end_your_live_broadcast">Are you sure you want to end your live broadcast?</string>
    <string name="end_now">End Now</string>
    <string name="your_public_key">Your Public Key</string>
    <string name="this_key_can_be_copied_from_your_live_stream_shopping_dashboard">This key can be copied from your Live Stream Shopping dashboard.</string>
    <string name="store_url">Store URL</string>
    <string name="this_is_your_shopify_store_url">This is your Shopify Store URL.</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="login_to_express_yourself_live_and_promote_your_products">Login to Express yourself LIVE And promote your PRODUCTS</string>
    <string name="broadcast_your_events_and_engage_with_your_viewers">Broadcast your Events and engage with your viewers</string>
    <string name="last_reminder_string">Sorry,Your Live Broadcast Time limit has been reached. Your Broadcast will automatically end in the next 30 seconds.</string>
    <string name="first_reminder_string">Your Live Broadcast will end in next 2 minutes. Please ensure you finish the Event for your viewers before the end time.</string>
    <string name="alert_string">Alert</string>
    <string name="enable_microphone">Enable Microphone</string>
    <string name="enable_camera">Enable Camera</string>
    <string name="please_enable_camera_and_microphone_permissions_to_start_live_broadcasting">Please enable Camera And Microphone permissions to start Live Broadcasting</string>
    <string name="checking_connection">Checking Connection</string>
    <string name="network_quality">Network Quality</string>
    <string name="instructions">Instructions</string>
    <string name="_1_please_ensure_that_you_have_a_stable_internet_connection">1. Please ensure that you have a stable Internet Connection.</string>
    <string name="_2_make_sure_your_device_s_camera_and_microphone_is_turned_on_during_the_live_stream">2. Make sure your device\'s camera and microphone is turned on during the live stream.</string>
    <string name="microaPhonr_permission_required_string">Permission to access the microphone is required for this app to record audio.</string>
    <string name="permission_required_title_string">Permission required</string>
    <string name="camera_permission_required">Permission to access the camera is required for this app to open camera.</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="login">Login</string>
    <string name="broadcast_your_events">Broadcast your Events</string>
    <string name="store">Store</string>
    <string name="below_are_the_upcoming_events_for_which_you_are_the_host">Below are the Upcoming Events for which you are the Host</string>
    <string name="no_events_available">No Events Available</string>
    <string name="null_user_name_string">null</string>
    <string name="logout">LogOut</string>
    <string name="refresh">Refresh</string>
    <string name="cancel">Cancel</string>
    <string name="connection_result">Connection Result</string>
    <string name="_3_plug_in_your_device_so_that_the_battery_doesn_t_die">3. Plug in your device so that the battery doesn\'t die .</string>
    <string name="_4_position_your_device_for_maximum_visibility_use_chat_feature_to_interact_with_the_audience">4. Position your device for maximum visibility. Use Chat feature to interact with the audience.</string>
    <string name="_5_turn_on_some_good_lights_eliminate_interfering_sounds_and_other_noises">5. Turn on some good lights. Eliminate interfering sounds and other noises.</string>
    <string name="don_t_show_this_to_me_again">Don\'t show this to me again</string>
    <string name="ready_get_set_go">Ready, Get Set, Go</string>
    <string name="click_on_the_button_go_live_we_will_notify_the_users_who_are_waiting_for_this_event">Click on the button go Live, We will notify the users who are waiting for this Event</string>
    <string name="go_live">Go Live</string>
    <string name="continue_string">Continue</string>
    <string name="close">Close</string>
    <string name="no_products">No Products</string>
    <string name="products_to_promote_in_this_events">Products to promote in this Events</string>
    <string name="beauty_options">Beauty Options</string>
    <string name="lightening_contrast">Lightening Contrast</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="high">High</string>
    <string name="lightening">Lightening</string>
    <string name="smoothness">Smoothness</string>
    <string name="redness">Redness</string>
    <string name="live">Live</string>
    <string name="_0">0</string>
    <string name="say_something">Say something...</string>
    <string name="loading_statistics">Loading Statistics</string>
    <string name="of_views"># of Views:</string>
    <string name="of_reactions"># of Reactions:</string>
    <string name="of_comments"># of Comments:</string>
    <string name="done">DONE</string>
    <string name="login_failed">Login Failed</string>
    <string name="error">error</string>
    <string name="you_are_live_now">You are now live!</string>
    <string name="ok">OK</string>
    <string name="public_key">Public-key</string>
    <string name="content_type">Content_Type</string>
    <string name="auth_string">Authorization</string>
    <string name="logout_failed">Logout Failed</string>
</resources>