<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivChannelizeLiveStreaming"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_logo_svg" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBroadcastYourEventHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/broadcast_your_events_and_engage_with_your_viewers"
            android:textColor="@color/dark_grey"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivChannelizeLiveStreaming" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLoginToExpress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal"
            android:text="@string/login_to_express_yourself_live_and_promote_your_products"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBroadcastYourEventHeader" />

        <RelativeLayout
            android:id="@+id/rlPublicKeyContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangular_rounded_corner_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLoginToExpress">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPublicKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_public_key"
                android:drawablePadding="7dp"
                android:drawableTint="@color/dark_grey"
                android:hint="@string/your_public_key"
                android:inputType="text"
                android:textSize="16sp" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPublicKeyInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_info_outline"
            android:drawablePadding="5dp"
            android:drawableTint="@color/dark_grey"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/this_key_can_be_copied_from_your_live_stream_shopping_dashboard"
            android:textColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlPublicKeyContainer" />

        <RelativeLayout
            android:id="@+id/rlStoreUrlContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangular_rounded_corner_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPublicKeyInfo">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etStoreUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_store_url"
                android:drawablePadding="7dp"
                android:drawableTint="@color/dark_grey"
                android:hint="@string/store_url"
                android:inputType="text"
                android:textAllCaps="true"
                android:textSize="16sp" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvStoreUrlInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:drawableStart="@drawable/ic_info_outline"
            android:drawablePadding="5dp"
            android:drawableTint="@color/dark_grey"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:text="@string/this_is_your_shopify_store_url"
            android:textColor="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlStoreUrlContainer" />

        <RelativeLayout
            android:id="@+id/rlEmailContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangular_rounded_corner_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvStoreUrlInfo">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="7dp"
                android:drawableTint="@color/dark_grey"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPasswordContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangular_rounded_corner_border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlEmailContainer">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="7dp"
                android:drawableTint="@color/dark_grey"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_button_border"
            android:backgroundTint="@color/btn_bg_blue"
            android:gravity="center_horizontal"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rlPasswordContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


