<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cslHeaderContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:tint="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cancel" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvBeautyOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beauty_options"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/swhMuteVideo"
            app:layout_constraintStart_toEndOf="@id/ivCancel"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swhMuteVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white_color"
            android:textSize="14sp"
            android:theme="@style/SwitchTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/div"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greytxt_color"
        app:layout_constraintTop_toBottomOf="@id/cslHeaderContainer" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLighteningContrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:text="@string/lightening_contrast"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div" />

    <LinearLayout
        android:id="@+id/llSetContrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button_border"
        android:backgroundTint="@color/grey_light"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tvLighteningContrast">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_border"
            android:backgroundTint="@color/grey_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/low"
            android:textColor="@color/greytxt_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_border"
            android:backgroundTint="@color/grey_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/normal"
            android:textColor="@color/greytxt_color" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHigh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_border"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/high"
            android:textColor="@color/greytxt_color" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cslLightingContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llSetContrast">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLighting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightening"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slrLightness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:haloColor="@color/btn_bg_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLighting"
            app:thumbColor="@color/btn_bg_blue"
            app:trackColorActive="@color/btn_bg_blue"
            app:trackColorInactive="@color/grey_light" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cslSmoothnessContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cslLightingContainer">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSmoothness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoothness"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slrSmoothness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:haloColor="@color/btn_bg_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSmoothness"
            app:thumbColor="@color/btn_bg_blue"
            app:trackColorActive="@color/btn_bg_blue"
            app:trackColorInactive="@color/grey_light" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cslRednessContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cslSmoothnessContainer">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRedness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redness"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slrRedness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:haloColor="@color/btn_bg_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRedness"
            app:thumbColor="@color/btn_bg_blue"
            app:trackColorActive="@color/btn_bg_blue"
            app:trackColorInactive="@color/grey_light" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>